--- a/EquiposTecnicosSN.Web/Views/EquiposClimatizacion/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/EquiposClimatizacion/Index.cshtml
@@ -57,9 +57,22 @@
                                         @Html.DisplayFor(modelItem => item.Estado)
                                     </td>
                                     <td>
-                                        @Html.ActionLink("Editar", "Edit", new { id = item.EquipoId }) |
-                                        @Html.ActionLink("Ver", "Details", new { id = item.EquipoId }) |
-                                        @Html.ActionLink("Borrar", "Delete", new { id = item.EquipoId }) |
+                                        <a class="btn btn-default btn-xs"
+                                           href="@Url.Action("Edit", new { id = item.EquipoId })"
+                                           title="Editar Equipo">
+                                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                        </a>
+
+                                        <a class="btn btn-default btn-xs"
+                                           href="@Url.Action("Details", new { id = item.EquipoId })"
+                                           title="Ver Equipo">
+                                            <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+                                        </a>
+                                        <a class="btn btn-default btn-xs"
+                                           href="@Url.Action("Delete", new { id = item.EquipoId })"
+                                           title="Eliminar Equipo">
+                                            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                                        </a> |
                                         @Html.ActionLink("Nuevo Ticket", "CreateForEquipo", "Mantenimientos", new { idEquipo = item.EquipoId }, null)
                                     </td>
                                 </tr>
