--- a/EquiposTecnicosSN.Web/Views/EquiposClimatizacion/Edit.cshtml
+++ b/EquiposTecnicosSN.Web/Views/EquiposClimatizacion/Edit.cshtml
@@ -17,13 +17,10 @@
                 <div class="col-md-6">
                     <div class="form-group">
                         <input type="submit" value="Guardar" class="btn btn-primary" />
+                        <a href="@Url.Action("Index")" class="btn btn-default"> Volver</a>
                     </div>
                 </div>
             </div>
-            <hr />
         </div>
     </div>
 }
-<div>
-    @Html.ActionLink("Volver", "Index")
-</div>
