--- a/EquiposTecnicosSN.Web/Views/Ubicaciones/Delete.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Ubicaciones/Delete.cshtml
@@ -26,8 +26,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <a href="@Url.Action("Index")" class="btn btn-default"> Volver</a>
+            <input type="submit" value="Delete" class="btn btn-danger" />
         </div>
     }
 </div>
