--- a/EquiposTecnicosSN.Web/Views/InformacionHardware/Create.cshtml
+++ b/EquiposTecnicosSN.Web/Views/InformacionHardware/Create.cshtml
@@ -57,12 +57,9 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
+                <a href="@Url.Action("Index")" class="btn btn-default"> Volver</a>
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
