--- a/EquiposTecnicosSN.Web/Views/Mantenimientos/Create.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Mantenimientos/Create.cshtml
@@ -24,7 +24,7 @@
 
                             <div class="form-group">
                                 @Html.LabelFor(model => model.NumeroReferencia, htmlAttributes: new { @class = "control-label" })
-                                @Html.EditorFor(model => model.NumeroReferencia, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.EditorFor(model => model.NumeroReferencia, new { htmlAttributes = new { @class = "form-control", disabled = "disabled", @readonly = "readonly" } })
                                 @Html.ValidationMessageFor(model => model.NumeroReferencia, "", new { @class = "text-danger" })
                             </div>
 
@@ -37,9 +37,9 @@
 
                         <div class="col-md-6">
                             <div class="form-group">
-                                @Html.LabelFor(model => model.Tipo, htmlAttributes: new { @class = "control-label" })
-                                @Html.EnumDropDownListFor(model => model.Tipo, htmlAttributes: new { @class = "form-control" })
-                                @Html.ValidationMessageFor(model => model.Tipo, "", new { @class = "text-danger" })
+                                @Html.LabelFor(model => model.MantenimientoTipo, htmlAttributes: new { @class = "control-label" })
+                                @Html.EnumDropDownListFor(model => model.MantenimientoTipo, htmlAttributes: new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.MantenimientoTipo, "", new { @class = "text-danger" })
                             </div>
 
                             <div class="form-group">
@@ -71,12 +71,9 @@
     <div class="row">
         <div class="col-md-6">
             <div class="form-group">
+                <a href="@Url.Action("Index")" class="btn btn-default"> Volver</a>
                 <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </div>
     </div>
 }
-<hr />
-<div>
-    @Html.ActionLink("Volver", "Index")
-</div>
