--- a/EquiposTecnicosSN.Web/Views/Mantenimientos/CreateForEquipo.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Mantenimientos/CreateForEquipo.cshtml
@@ -24,7 +24,7 @@
 
                             <div class="form-group">
                                 @Html.LabelFor(model => model.NumeroReferencia, htmlAttributes: new { @class = "control-label" })
-                                @Html.EditorFor(model => model.NumeroReferencia, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.EditorFor(model => model.NumeroReferencia, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                                 @Html.ValidationMessageFor(model => model.NumeroReferencia, "", new { @class = "text-danger" })
                             </div>
 
@@ -37,21 +37,15 @@
 
                         <div class="col-md-6">
                             <div class="form-group">
-                                @Html.LabelFor(model => model.Tipo, htmlAttributes: new { @class = "control-label" })
-                                @Html.EnumDropDownListFor(model => model.Tipo, htmlAttributes: new { @class = "form-control" })
-                                @Html.ValidationMessageFor(model => model.Tipo, "", new { @class = "text-danger" })
+                                @Html.LabelFor(model => model.MantenimientoTipo, htmlAttributes: new { @class = "control-label" })
+                                @Html.EnumDropDownListFor(model => model.MantenimientoTipo, htmlAttributes: new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.MantenimientoTipo, "", new { @class = "text-danger" })
                             </div>
 
                             <div class="form-group">
                                 @Html.LabelFor(model => model.Estado, htmlAttributes: new { @class = "control-label" })
                                 @Html.EnumDropDownListFor(model => model.Estado, htmlAttributes: new { @class = "form-control" })
                                 @Html.ValidationMessageFor(model => model.Estado, "", new { @class = "text-danger" })
-                            </div>
-
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.FechaDeFin, htmlAttributes: new { @class = "control-label" })
-                                @Html.EditorFor(model => model.FechaDeFin, new { htmlAttributes = new { @class = "form-control  date-picker" } })
-                                @Html.ValidationMessageFor(model => model.FechaDeFin, "", new { @class = "text-danger" })
                             </div>
                         </div>
                     </div>
