--- a/EquiposTecnicosSN.Web/Views/Mantenimientos/Details.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Mantenimientos/Details.cshtml
@@ -1,67 +1,23 @@
 ﻿@model EquiposTecnicosSN.Entities.Mantenimiento.Mantenimiento
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Mantenimiento de Equipos";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
 
-<div>
-    <h4>Mantenimiento</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Equipo.NombreCompleto)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Equipo.NombreCompleto)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.NumeroReferencia)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.NumeroReferencia)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Estado)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Estado)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Descripcion)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Descripcion)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.FechaDeInicio)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.FechaDeInicio)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.FechaDeFin)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.FechaDeFin)
-        </dd>
-
-    </dl>
+<div class="row">
+    <div class="col-lg-12">
+        @Html.DisplayFor(model => model)
+    </div>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.MantenimientoId }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+
+<div class="row">
+    <div class="col-lg-12">
+        @Html.Partial("_OrdenesDeTrabajo", Model.OrdenesDeTrabajo)
+    </div>
+</div>
+
+<hr />
+@Html.ActionLink("Editar", "Edit", new { id = Model.MantenimientoId }) |
+@Html.ActionLink("Volver", "Index")
