--- a/EquiposTecnicosSN.Web/Views/Mantenimientos/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Mantenimientos/Index.cshtml
@@ -18,6 +18,8 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <table class="table table-hover table-responsive table-condensed table-striped">
+                            <thead>
+
                             <tr>
                                 <th>
                                     @Html.DisplayNameFor(model => model.Equipo)
@@ -39,6 +41,8 @@
                                 </th>
                                 <th></th>
                             </tr>
+                            </thead>
+                            <tbody>
 
                             @foreach (var item in Model)
                             {
@@ -62,13 +66,27 @@
                                         @Html.DisplayFor(modelItem => item.FechaDeFin)
                                     </td>
                                     <td>
-                                        @Html.ActionLink("Editar", "Edit", new { id = item.MantenimientoId }) |
-                                        @Html.ActionLink("Ver", "Details", new { id = item.MantenimientoId }) |
-                                        @Html.ActionLink("Borrar", "Delete", new { id = item.MantenimientoId }) |
+                                        <a class="btn btn-default btn-xs"
+                                           href="@Url.Action("Edit", new { id = item.MantenimientoId })"
+                                           title="Editar Mantenimiento">
+                                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                        </a>
+
+                                        <a class="btn btn-default btn-xs"
+                                           href="@Url.Action("Details", new { id = item.MantenimientoId })"
+                                           title="Ver Mantenimiento">
+                                            <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+                                        </a>
+                                        <a class="btn btn-default btn-xs"
+                                           href="@Url.Action("Delete", new { id = item.MantenimientoId })"
+                                           title="Eliminar Mantenimiento">
+                                            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                                        </a> |
                                         @Html.ActionLink("Ver Órdenes", "Index", "OrdenesDeTrabajo", new { id = item.MantenimientoId }, null)
                                     </td>
                                 </tr>
                             }
+                            </tbody>
 
                         </table>
                     </div>
