--- a/EquiposTecnicosSN.Web/Views/Marcas/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Marcas/Index.cshtml
@@ -38,9 +38,22 @@
                                         @Html.DisplayFor(modelItem => item.Fabricante.Nombre)
                                     </td>
                                     <td>
-                                        @Html.ActionLink("Editar", "Edit", new { id = item.MarcaId }) |
-                                        @Html.ActionLink("Ver", "Details", new { id = item.MarcaId }) |
-                                        @Html.ActionLink("Borrar", "Delete", new { id = item.MarcaId })
+                                        <a class="btn btn-default btn-xs"
+                                           href="@Url.Action("Edit", new { id = item.MarcaId })"
+                                           title="Editar Marca">
+                                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                        </a>
+
+                                        <a class="btn btn-default btn-xs"
+                                           href="@Url.Action("Details", new { id = item.MarcaId })"
+                                           title="Ver Marca">
+                                            <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+                                        </a>
+                                        <a class="btn btn-default btn-xs"
+                                           href="@Url.Action("Delete", new { id = item.MarcaId })"
+                                           title="Eliminar Marca">
+                                            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                                        </a>
                                     </td>
                                 </tr>
                             }
