--- a/EquiposTecnicosSN.Web/Views/Modelos/Edit.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Modelos/Edit.cshtml
@@ -37,12 +37,9 @@
     <div class="row">
         <div class="col-md-6">
             <div class="form-group">
+                <a href="@Url.Action("Index")" class="btn btn-default"> Volver</a>
                 <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </div>
     </div>
 }
-<hr />
-<div>
-    @Html.ActionLink("Volver", "Index")
-</div>
