--- a/EquiposTecnicosSN.Web/Views/Modelos/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Modelos/Index.cshtml
@@ -38,13 +38,25 @@
                                         @Html.DisplayFor(modelItem => item.Marca.Nombre)
                                     </td>
                                     <td>
-                                        @Html.ActionLink("Editar", "Edit", new { id = item.ModeloId }) |
-                                        @Html.ActionLink("Ver", "Details", new { id = item.ModeloId }) |
-                                        @Html.ActionLink("Borrar", "Delete", new { id = item.ModeloId })
+                                        <a class="btn btn-default btn-xs"
+                                           href="@Url.Action("Edit", new { id = item.ModeloId })"
+                                           title="Editar Modelo">
+                                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                        </a>
+
+                                        <a class="btn btn-default btn-xs"
+                                           href="@Url.Action("Details", new { id = item.ModeloId })"
+                                           title="Ver Modelo">
+                                            <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+                                        </a>
+                                        <a class="btn btn-default btn-xs"
+                                           href="@Url.Action("Delete", new { id = item.ModeloId })"
+                                           title="Eliminar Modelo">
+                                            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                                        </a>
                                     </td>
                                 </tr>
                             }
-
                         </table>
                     </div>
                 </div>
