--- a/EquiposTecnicosSN.Web/Views/OrdenesDeTrabajo/IndexForMantenimiento.cshtml
+++ b/EquiposTecnicosSN.Web/Views/OrdenesDeTrabajo/IndexForMantenimiento.cshtml
@@ -39,13 +39,25 @@
                                         @Html.DisplayFor(modelItem => item.Resolucion)
                                     </td>
                                     <td>
-                                        @Html.ActionLink("Editar", "Edit", new { id = item.OrdenDeTrabajoId }) |
-                                        @Html.ActionLink("Ver", "Details", new { id = item.OrdenDeTrabajoId }) |
-                                        @Html.ActionLink("Borrar", "Delete", new { id = item.OrdenDeTrabajoId })
+                                        <a class="btn btn-default btn-xs"
+                                           href="@Url.Action("Edit", new { id = item.OrdenDeTrabajoId })"
+                                           title="Editar Orden de trabajo">
+                                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                        </a>
+
+                                        <a class="btn btn-default btn-xs"
+                                           href="@Url.Action("Details", new { id = item.OrdenDeTrabajoId })"
+                                           title="Ver Orden de trabajo">
+                                            <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+                                        </a>
+                                        <a class="btn btn-default btn-xs"
+                                           href="@Url.Action("Delete", new { id = item.OrdenDeTrabajoId })"
+                                           title="Eliminar Orden de trabajo">
+                                            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                                        </a>
                                     </td>
                                 </tr>
                             }
-
                         </table>
                     </div>
                 </div>
