--- a/EquiposTecnicosSN.Web/Views/Proveedores/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Proveedores/Index.cshtml
@@ -32,13 +32,25 @@
                                         @Html.DisplayFor(modelItem => item.Nombre)
                                     </td>
                                     <td>
-                                        @Html.ActionLink("Editar", "Edit", new { id = item.ProveedorId }) |
-                                        @Html.ActionLink("Ver", "Details", new { id = item.ProveedorId }) |
-                                        @Html.ActionLink("Borrar", "Delete", new { id = item.ProveedorId })
+                                        <a class="btn btn-default btn-xs"
+                                           href="@Url.Action("Edit", new { id = item.ProveedorId })"
+                                           title="Editar Proveedor">
+                                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                        </a>
+
+                                        <a class="btn btn-default btn-xs"
+                                           href="@Url.Action("Details", new { id = item.ProveedorId })"
+                                           title="Ver Proveedor">
+                                            <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+                                        </a>
+                                        <a class="btn btn-default btn-xs"
+                                           href="@Url.Action("Delete", new { id = item.ProveedorId })"
+                                           title="Eliminar Proveedor">
+                                            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                                        </a>
                                     </td>
                                 </tr>
                             }
-
                         </table>
                     </div>
                 </div>
