--- a/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/Mantenimiento.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/Mantenimiento.cshtml
@@ -1,7 +1,7 @@
 ﻿@model EquiposTecnicosSN.Entities.Mantenimiento.Mantenimiento
 
 <div class="panel panel-default">
-    <div class="panel-heading">Nuevo @ViewBag.Title</div>
+    <div class="panel-heading">@ViewBag.Title</div>
     <div class="panel-body">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.MantenimientoId)
@@ -16,7 +16,7 @@
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.NumeroReferencia, htmlAttributes: new { @class = "control-label" })
-                    @Html.EditorFor(model => model.NumeroReferencia, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.NumeroReferencia, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                     @Html.ValidationMessageFor(model => model.NumeroReferencia, "", new { @class = "text-danger" })
                 </div>
 
@@ -29,9 +29,9 @@
 
             <div class="col-md-6">
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Tipo, htmlAttributes: new { @class = "control-label" })
-                    @Html.EnumDropDownListFor(model => model.Tipo, "Seleccione", htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.Tipo, "", new { @class = "text-danger" })
+                    @Html.LabelFor(model => model.MantenimientoTipo, htmlAttributes: new { @class = "control-label" })
+                    @Html.EnumDropDownListFor(model => model.MantenimientoTipo, "Seleccione", htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.MantenimientoTipo, "", new { @class = "text-danger" })
                 </div>
 
                 <div class="form-group">
