--- a/EquiposTecnicosSN.Web/Views/Shared/_OrdenesDeTrabajo.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_OrdenesDeTrabajo.cshtml
@@ -1,68 +1,59 @@
-﻿@model EquiposTecnicosSN.Entities.Equipos.Equipo
+﻿@model IEnumerable<EquiposTecnicosSN.Entities.Mantenimiento.OrdenDeTrabajo>
+
+@{
+    ViewBag.Title = "Ordenes de Trabajo";
+}
 
 <div class="row">
     <div class="col-lg-12">
         <div class="panel panel-default">
-            <div class="panel-heading">Listado de Mantenimientos</div>
+            <div class="panel-heading">Listado de @ViewBag.Title</div>
             <div class="panel-body">
                 <div class="row">
                     <div class="col-lg-12">
-                        @Html.ActionLink("Nuevo", "CreateForEquipo", "Mantenimientos", new { idEquipo = Model.EquipoId }, htmlAttributes: new { @type = "button", @class = "btn btn-primary btn-table-create" })
+                        @Html.ActionLink("Nueva Orden", "CreateForMantenimiento", "OrdenesDeTrabajo", routeValues: new { mantenimientoId = ViewBag.MantenimientoId, equipoId = ViewBag.EquipoId }, htmlAttributes: new { @type = "button", @class = "btn btn-primary btn-table-create" })
                     </div>
                 </div>
-
                 <div class="row">
                     <div class="col-lg-12">
+
                         <table class="table table-hover table-responsive table-condensed table-striped">
                             <tr>
                                 <th>
-                                    Nº de Referencia
+                                    @Html.DisplayNameFor(model => model.Diagnostico)
                                 </th>
                                 <th>
-                                    Estado
-                                </th>
-                                <th>
-                                    Fecha de Inicio
-                                </th>
-                                <th>
-                                    Descripción
+                                    @Html.DisplayNameFor(model => model.Resolucion)
                                 </th>
                                 <th></th>
                             </tr>
 
-                            @foreach (var item in Model.HistorialDeMantenimientos)
+                            @foreach (var item in Model)
                             {
                                 <tr>
-                                    <td class="center">
-                                        @Html.DisplayFor(modelItem => item.NumeroReferencia)
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Diagnostico)
                                     </td>
                                     <td>
-                                        @Html.DisplayFor(modelItem => item.Estado)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.FechaDeInicio)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Descripcion)
+                                        @Html.DisplayFor(modelItem => item.Resolucion)
                                     </td>
                                     <td>
                                         <a class="btn btn-default btn-xs"
-                                           href="@Url.Action("Edit", "Mantenimientos", new { id = item.EquipoId }, null)"
+                                           href="@Url.Action("Edit", new { id = item.OrdenDeTrabajoId })"
                                            title="Editar Orden de trabajo">
                                             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                                         </a>
 
                                         <a class="btn btn-default btn-xs"
-                                           href="@Url.Action("Details", "Mantenimientos", new { id = item.EquipoId }, null)"
+                                           href="@Url.Action("Details", new { id = item.OrdenDeTrabajoId })"
                                            title="Ver Orden de trabajo">
                                             <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
                                         </a>
                                         <a class="btn btn-default btn-xs"
-                                           href="@Url.Action("Delete", "Mantenimientos", new { id = item.EquipoId }, null)"
+                                           href="@Url.Action("Delete", new { id = item.OrdenDeTrabajoId })"
                                            title="Eliminar Orden de trabajo">
                                             <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-                                        </a> |
-                                        @Html.ActionLink("Ver Órdendes", "IndexForMantenimiento", "OrdenesDeTrabajo", new { mantenimientoId = item.MantenimientoId, equipoId = item.EquipoId }, null)
+                                        </a>
                                     </td>
                                 </tr>
                             }
@@ -73,4 +64,8 @@
             </div>
         </div>
     </div>
+</div>
+<hr />
+<div>
+    <a href="@Url.Action("Details","EquiposClimatizacion", new { id = ViewBag.EquipoId })">Volver</a>
 </div>
