--- a/EquiposTecnicosSN.Web/Views/Traslados/Edit.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Traslados/Edit.cshtml
@@ -50,13 +50,10 @@
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
+            <div class="col-md-12">
+                <a href="@Url.Action("Index")" class="btn btn-default"> Volver</a>
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
