--- a/EquiposTecnicosSN.Web/Views/Traslados/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Traslados/Index.cshtml
@@ -54,9 +54,22 @@
                                         @Html.DisplayFor(modelItem => item.UbicacionDestino.Nombre)
                                     </td>
                                     <td>
-                                        @Html.ActionLink("Editar", "Edit", new { id = item.TrasladoId }) |
-                                        @Html.ActionLink("Ver", "Details", new { id = item.TrasladoId }) |
-                                        @Html.ActionLink("Borrar", "Delete", new { id = item.TrasladoId })
+                                        <a class="btn btn-default btn-xs"
+                                           href="@Url.Action("Edit", new { id = item.TrasladoId })"
+                                           title="Editar Traslado">
+                                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                        </a>
+
+                                        <a class="btn btn-default btn-xs"
+                                           href="@Url.Action("Details", new { id = item.TrasladoId })"
+                                           title="Ver Traslado">
+                                            <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+                                        </a>
+                                        <a class="btn btn-default btn-xs"
+                                           href="@Url.Action("Delete", new { id = item.TrasladoId })"
+                                           title="Eliminar Traslado">
+                                            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                                        </a>
                                     </td>
                                 </tr>
                             }
