--- a/EquiposTecnicosSN.Web/Views/Ubicaciones/Create.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Ubicaciones/Create.cshtml
@@ -29,15 +29,7 @@
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-6">
-            <div class="form-group">
-                <input type="submit" value="Guardar" class="btn btn-primary" />
-            </div>
-        </div>
-    </div>
+    <a href="@Url.Action("Index")" class="btn btn-default"> Volver</a>
+    <input type="submit" value="Guardar" class="btn btn-primary" />
 }
-<hr />
-<div>
-    @Html.ActionLink("Volver", "Index")
-</div>
+
