--- a/EquiposTecnicosSN.Web/Views/Ubicaciones/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Ubicaciones/Index.cshtml
@@ -33,9 +33,22 @@
                                         @Html.DisplayFor(modelItem => item.Nombre)
                                     </td>
                                     <td>
-                                        @Html.ActionLink("Editar", "Edit", new { id = item.UbicacionId }) |
-                                        @Html.ActionLink("Ver", "Details", new { id = item.UbicacionId }) |
-                                        @Html.ActionLink("Borrar", "Delete", new { id = item.UbicacionId })
+                                        <a class="btn btn-default btn-xs"
+                                           href="@Url.Action("Edit", new { id = item.UbicacionId })"
+                                           title="Editar Ubicación">
+                                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                        </a>
+
+                                        <a class="btn btn-default btn-xs"
+                                           href="@Url.Action("Details", new { id = item.UbicacionId })"
+                                           title="Ver Ubicación">
+                                            <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+                                        </a>
+                                        <a class="btn btn-default btn-xs"
+                                           href="@Url.Action("Delete", new { id = item.UbicacionId })"
+                                           title="Eliminar Ubicación">
+                                            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                                        </a>
                                     </td>
                                 </tr>
                             }
