--- a/EquiposTecnicosSN.Web/Views/Mantenimientos/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Mantenimientos/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<EquiposTecnicosSN.Entities.Mantenimiento.Mantenimiento>
+﻿@model IEnumerable<EquiposTecnicosSN.Entities.Mantenimiento.MantenimientoEquipo>
 
 @{
     ViewBag.Title = "Mantenimientos de Equipos";
