--- a/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/Mantenimiento.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/Mantenimiento.cshtml
@@ -1,4 +1,4 @@
-﻿@model EquiposTecnicosSN.Entities.Mantenimiento.Mantenimiento
+﻿@model EquiposTecnicosSN.Entities.Mantenimiento.MantenimientoEquipo
 
 <div class="panel panel-default">
     <div class="panel-heading">@ViewBag.Title</div>
