--- a/EquiposTecnicosSN.Web/Views/Mantenimientos/CreateForEquipo.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Mantenimientos/CreateForEquipo.cshtml
@@ -1,4 +1,4 @@
-﻿@model EquiposTecnicosSN.Entities.Mantenimiento.Mantenimiento
+﻿@model EquiposTecnicosSN.Entities.Mantenimiento.MantenimientoEquipo
 
 @{
     ViewBag.Title = "Mantenimiento de Equipo";
