Creacion y Diagnosito de una Orden. Modelo de repuestos

--- a/EquiposTecnicosSN.Web/Views/EquiposClimatizacion/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/EquiposClimatizacion/Index.cshtml
@@ -73,7 +73,7 @@
                                            title="Eliminar Equipo">
                                             <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
                                         </a> |
-                                        @Html.ActionLink("Nuevo Ticket", "CreateForEquipo", "Mantenimientos", new { idEquipo = item.EquipoId }, null)
+                                        @Html.ActionLink("Nueva ODT", "CreateForEquipo", "OrdenesDeTrabajo", new { id = item.EquipoId }, null)
                                     </td>
                                 </tr>
                             }
