--- a/EquiposTecnicosSN.Web/Views/OrdenesDeTrabajo/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/OrdenesDeTrabajo/Index.cshtml
@@ -1,67 +1,124 @@
 ﻿@model IEnumerable<EquiposTecnicosSN.Entities.Mantenimiento.OrdenDeTrabajo>
 
 @{
-    ViewBag.Title = "Ordenes de Trabajo";
+    ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row">
-    <div class="col-lg-12">
-        <div class="panel panel-default">
-            <div class="panel-heading">Listado de @ViewBag.Title</div>
-            <div class="panel-body">
-                <div class="row">
-                    <div class="col-lg-12">
-                        @Html.ActionLink("Nueva", "Create", null, htmlAttributes: new { @type = "button", @class = "btn btn-primary btn-table-create" })
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-12">
+<h2>Index</h2>
 
-                        <table class="table table-hover table-responsive table-condensed table-striped">
-                            <tr>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.Diagnostico)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.Resolucion)
-                                </th>
-                                <th></th>
-                            </tr>
+<p>
+    @Html.ActionLink("Create New", "Create")
+</p>
+<table class="table">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Equipo.NombreCompleto)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Estado)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.FechaInicio)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.UsuarioInicioId)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Prioridad)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.EquipoParado)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Descripcion)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Diagnostico)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DetalleReparacion)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.CausaRaiz)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.FechaDiagnostico)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.UsuarioDiagnosticoId)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.FechaReparacion)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.UsuarioReparacionId)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.FechaCierre)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.UsuarioCierreId)
+        </th>
+        <th></th>
+    </tr>
 
-                            @foreach (var item in Model)
-                            {
-                                <tr>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Diagnostico)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Resolucion)
-                                    </td>
-                                    <td>
-                                        <a class="btn btn-default btn-xs"
-                                           href="@Url.Action("Edit", new { id = item.OrdenDeTrabajoId })"
-                                           title="Editar Orden de trabajo">
-                                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                                        </a>
+@foreach (var item in Model) {
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.Equipo.NombreCompleto)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Estado)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.FechaInicio)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.UsuarioInicioId)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Prioridad)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.EquipoParado)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Descripcion)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Diagnostico)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.DetalleReparacion)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.CausaRaiz)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.FechaDiagnostico)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.UsuarioDiagnosticoId)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.FechaReparacion)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.UsuarioReparacionId)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.FechaCierre)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.UsuarioCierreId)
+        </td>
+        <td>
+            @Html.ActionLink("Edit", "Edit", new { id=item.OrdenDeTrabajoId }) |
+            @Html.ActionLink("Details", "Details", new { id=item.OrdenDeTrabajoId }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.OrdenDeTrabajoId })
+        </td>
+    </tr>
+}
 
-                                        <a class="btn btn-default btn-xs"
-                                           href="@Url.Action("Details", new { id = item.OrdenDeTrabajoId })"
-                                           title="Ver Orden de trabajo">
-                                            <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
-                                        </a>
-                                        <a class="btn btn-default btn-xs"
-                                           href="@Url.Action("Delete", new { id = item.OrdenDeTrabajoId })"
-                                           title="Eliminar Orden de trabajo">
-                                            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-                                        </a>
-                                    </td>
-                                </tr>
-                            }
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+</table>
