--- a/EquiposTecnicosSN.Web/Views/EquiposClimatizacion/Details.cshtml
+++ b/EquiposTecnicosSN.Web/Views/EquiposClimatizacion/Details.cshtml
@@ -29,7 +29,7 @@
     </div>
 }
 
-@Html.Partial("_MantenimientosEquipo", Model)
+@Html.Partial("_OrdenesDeTrabajoEquipo", Model)
 
 @Html.Partial("_TrasladosEquipoModal", Model.Traslados)
 
