--- a/EquiposTecnicosSN.Web/Views/OrdenesDeTrabajo/CreateForEquipo.cshtml
+++ b/EquiposTecnicosSN.Web/Views/OrdenesDeTrabajo/CreateForEquipo.cshtml
@@ -1,4 +1,5 @@
-﻿@model EquiposTecnicosSN.Entities.Mantenimiento.OrdenDeTrabajo
+﻿@using EquiposTecnicosSN.Entities.Mantenimiento
+@model OrdenDeTrabajo
 @{
     ViewBag.Title = "Nueva Orden de Trabajo";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -64,17 +65,36 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 @Html.LabelFor(model => model.Descripcion, htmlAttributes: new { @class = "control-label" })
-                                @Html.TextAreaFor(model => model.Descripcion, htmlAttributes: new { @class = "form-control" })
+                                @Html.TextAreaFor(model => model.Descripcion, htmlAttributes: new { @class = "form-control", rows = "5" })
                                 @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
                             </div>
                         </div>
                     </div>
 
                     <div class="row">
-                        <div class="col-md-12">
+                        <div class="col-md-6">
                             <div class="form-group">
-                                <label class="control-label">¿El equipo se encuentra parado?</label>
-                                @Html.EditorFor(model => model.EquipoParado, new { @class = "form-control" })
+                                <label class="control-label switch-label">¿El equipo se encuentra parado?</label>
+                                    @Html.EditorFor(model => model.EquipoParado, new { @class = "form-control" })
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label class="control-label switch-label">Prioridad</label>
+                                <div class="btn-group" data-toggle="buttons">
+                                    <label class="btn btn-success-outline active">
+                                        @Html.RadioButtonFor(model => model.Prioridad, OrdenDeTrabajoPrioridad.Normal, new { @id = "Normal", @name = "Prioridad" }) 
+                                        @OrdenDeTrabajoPrioridad.Normal.ToString()
+                                    </label>
+                                    <label class="btn btn-warning-outline">
+                                        @Html.RadioButtonFor(model => model.Prioridad, OrdenDeTrabajoPrioridad.Urgencia, new { @id = "Urgencia", @name = "Prioridad" }) 
+                                        @OrdenDeTrabajoPrioridad.Urgencia.ToString()
+                                    </label>
+                                    <label class="btn btn-danger-outline">
+                                        @Html.RadioButtonFor(model => model.Prioridad, OrdenDeTrabajoPrioridad.Emergencia, new { @id = "Emergencia", @name = "Prioridad" }) 
+                                        @OrdenDeTrabajoPrioridad.Emergencia.ToString()
+                                    </label>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -101,6 +121,12 @@
                 onColor: "danger",
                 onText: "Si",
                 offText: "No"
+            });
+
+            $("#EquipoParado").on("switchChange.bootstrapSwitch", function (event, state) {
+                if (state) {
+                    $("#Emergencia").click();
+                }
             });
         });
     </script>
