--- a/EquiposTecnicosSN.Web/Views/OrdenesDeTrabajo/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/OrdenesDeTrabajo/Index.cshtml
@@ -1,124 +1,73 @@
 ﻿@model IEnumerable<EquiposTecnicosSN.Entities.Mantenimiento.OrdenDeTrabajo>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Ordenes de tabajo";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<div class="row">
+    <div class="col-lg-12">
+        <div class="panel panel-default">
+            <div class="panel-heading">Listado de Ordenes de trabajo</div>
+            <div class="panel-body">
 
-<h2>Index</h2>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <table class="table table-hover table-responsive table-condensed table-striped">
+                            <tr>
+                                <th>
+                                    Nº de Referencia
+                                </th>
+                                <th>
+                                    Estado
+                                </th>
+                                <th>
+                                    Fecha de Inicio
+                                </th>
+                                <th>
+                                    Descripción
+                                </th>
+                                <th></th>
+                            </tr>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Equipo.NombreCompleto)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Estado)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.FechaInicio)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UsuarioInicioId)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Prioridad)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.EquipoParado)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Descripcion)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Diagnostico)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DetalleReparacion)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CausaRaiz)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.FechaDiagnostico)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UsuarioDiagnosticoId)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.FechaReparacion)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UsuarioReparacionId)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.FechaCierre)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UsuarioCierreId)
-        </th>
-        <th></th>
-    </tr>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td class="center">
+                                        @Html.DisplayFor(modelItem => item.NumeroReferencia)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Estado)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.FechaInicio)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Descripcion)
+                                    </td>
+                                    <td>
+                                        <a class="btn btn-default btn-xs"
+                                           href="@Url.Action("Edit", "OrdenesDeTrabajo", new { id = item.OrdenDeTrabajoId }, null)"
+                                           title="Editar Orden de trabajo">
+                                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                        </a>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Equipo.NombreCompleto)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Estado)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.FechaInicio)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UsuarioInicioId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Prioridad)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.EquipoParado)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Descripcion)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Diagnostico)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DetalleReparacion)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CausaRaiz)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.FechaDiagnostico)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UsuarioDiagnosticoId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.FechaReparacion)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UsuarioReparacionId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.FechaCierre)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UsuarioCierreId)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.OrdenDeTrabajoId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.OrdenDeTrabajoId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.OrdenDeTrabajoId })
-        </td>
-    </tr>
-}
-
-</table>
+                                        <a class="btn btn-default btn-xs"
+                                           href="@Url.Action("Details", "OrdenesDeTrabajo", new { id = item.OrdenDeTrabajoId }, null)"
+                                           title="Ver Orden de trabajo">
+                                            <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+                                        </a>
+                                        <a class="btn btn-default btn-xs"
+                                           href="@Url.Action("Delete", "OrdenesDeTrabajo", new { id = item.OrdenDeTrabajoId }, null)"
+                                           title="Eliminar Orden de trabajo">
+                                            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                                        </a>
+                                    </td>
+                                </tr>
+                            }
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
